.metadata/.plugins/org.eclipse.cdt.ui/tempAdc.build.log
16:43:32 **** Incremental Build of configuration Debug for project tempAdc ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:142:71: error: too few arguments to function 'Kalman'
  142 |      printf("%d\t%d\t%d\t%d\n",cdsValue, tmpValue, adcValue/100, (int)Kalman((double)tmpValue));
      |                                                                       ^~~~~~
../Core/Src/main.c:65:8: note: declared here
   65 | double Kalman(double measurement, uint8_t ch) {
      |        ^~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:43:36 Build Failed. 2 errors, 0 warnings. (took 3s.293ms)

